add checklists and fix payment
